// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`override http traces get call with the right payload 1`] = `
Object {
  "message": Object {
    "clientId": "132464737464748494404949984847474848",
    "integrationUuid": "scenarioUuid",
    "intentName": "MyHandler",
    "method": "GET",
    "path": "www.google.com",
    "pathname": "/",
    "responseStatus": 200,
    "responseStatusMessage": "OK",
    "stage": "test",
    "tid": "get-trace-id",
    "type": "externalCall",
    "uuid": "test-uuid",
  },
  "timestamp": Any<Number>,
}
`;

exports[`override http traces request call with the right payload 1`] = `
Object {
  "message": Object {
    "clientId": "132464737464748494404949984847474848",
    "integrationUuid": "scenarioUuid",
    "intentName": "MyHandler",
    "method": "GET",
    "path": "www.google.com",
    "pathname": "/",
    "responseStatus": 200,
    "responseStatusMessage": "OK",
    "stage": "test",
    "tid": "request-trace-id",
    "type": "externalCall",
    "uuid": "test-uuid",
  },
  "timestamp": Any<Number>,
}
`;
